--- a/keyOS/res/layout/activity_edit_app.xml
+++ b/keyOS/res/layout/activity_edit_app.xml
@@ -449,7 +449,7 @@
                     android:layout_height="match_parent">
                     <TextView
                         android:layout_width="match_parent"
-                        android:text="Cancel"
+                        android:text="@string/cancel"
                         android:gravity="center"
                         android:id="@+id/cancel"
                         android:textStyle="bold"
@@ -480,7 +480,7 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:text="Done"
+                        android:text="@string/done"
                         android:id="@+id/done"
                         android:gravity="center"
                         android:background="@color/buttonColor"
