--- a/keyOS/res/layout/activity_import_export_settings.xml
+++ b/keyOS/res/layout/activity_import_export_settings.xml
@@ -181,6 +181,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="5dp"
+                                android:layout_marginRight="50dp"
                                 android:text="@string/generate_keyos_qr_code"
                                 android:textSize="13dp" />
                         </LinearLayout>
@@ -278,6 +279,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
+                                android:layout_marginRight="50dp"
                                 android:layout_marginTop="5dp"
                                 android:text="@string/import_keyos_setting_from_storage"
                                 android:textSize="13dp" />
@@ -351,6 +353,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="5dp"
+                                android:layout_marginRight="50dp"
+
                                 android:text="@string/import_keyos_setting_to_storage"
                                 android:textSize="13dp" />
                         </LinearLayout>
