--- a/keyOS/res/layout/activity_settings.xml
+++ b/keyOS/res/layout/activity_settings.xml
@@ -53,7 +53,7 @@
                         android:layout_width="match_parent"
                         android:textSize="24dp"
                         android:layout_marginStart="68dp"
-                        android:text="KeyOS"
+                        android:text="@string/app_name"
                         android:textColor="@color/black"
                         android:paddingBottom="3dp"
                         android:textStyle="bold"
@@ -151,6 +151,9 @@
                             android:layout_width="wrap_content"
                             android:text="@string/import_amp_export_settings"
                             android:gravity="center"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            android:layout_marginRight="30dp"
                             android:textColor="@android:color/black"
                             android:layout_marginLeft="65dp"
                             android:textSize="16dp"
@@ -190,6 +193,7 @@
                             android:layout_width="wrap_content"
                             android:text="@string/peripheral"
                             android:paddingTop="10dp"
+                            android:textAllCaps="true"
                             android:textStyle="bold"
                             android:layout_gravity="center_vertical"
                             android:gravity="center_vertical"
@@ -262,11 +266,13 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
-                                    android:text="Deny"
+                                    android:text="@string/deny"
                                     android:layout_centerInParent="true"
                                     android:layout_alignParentBottom="true"
                                     android:textSize="14dp"
                                     android:id="@+id/wifiMode"
+                                    android:maxLines="1"
+                                    android:ellipsize="end"
                                     android:layout_marginRight="20dp"
                                     android:layout_height="wrap_content"/>
 
@@ -318,11 +324,13 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
-                                    android:text="Deny"
+                                    android:text="@string/deny"
                                     android:layout_centerInParent="true"
                                     android:layout_alignParentBottom="true"
                                     android:textSize="14dp"
                                     android:id="@+id/bluetoothMode"
+                                    android:maxLines="1"
+                                    android:ellipsize="end"
                                     android:layout_marginRight="20dp"
                                     android:layout_height="wrap_content"/>
 
@@ -375,10 +383,12 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
-                                    android:text="Deny"
+                                    android:text="@string/deny"
                                     android:layout_centerInParent="true"
                                     android:layout_alignParentBottom="true"
                                     android:textSize="14dp"
+                                    android:maxLines="1"
+                                    android:ellipsize="end"
                                     android:id="@+id/orientationMode"
                                     android:layout_marginRight="20dp"
                                     android:layout_height="wrap_content"/>
@@ -442,10 +452,12 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
-                                    android:text="Deny"
+                                    android:text="@string/deny"
                                     android:layout_centerInParent="true"
                                     android:layout_alignParentBottom="true"
                                     android:textSize="14dp"
+                                    android:maxLines="1"
+                                    android:ellipsize="end"
                                     android:id="@+id/soundMode"
                                     android:layout_marginRight="20dp"
                                     android:layout_height="wrap_content"/>
@@ -470,6 +482,7 @@
                             android:text="@string/apps_amp_services"
                             android:paddingTop="10dp"
                             android:textStyle="bold"
+                            android:textAllCaps="true"
                             android:layout_gravity="center_vertical"
                             android:gravity="center_vertical"
                             android:textSize="14dp"
@@ -643,6 +656,7 @@
                             android:layout_gravity="center_vertical"
                             android:gravity="center_vertical"
                             android:textStyle="bold"
+                            android:textAllCaps="true"
                             android:textSize="14dp"
                             android:layout_height="match_parent"/>
                         <LinearLayout
@@ -708,6 +722,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:text="@string/additional"
+                            android:textAllCaps="true"
                             android:paddingTop="10dp"
                             android:layout_gravity="center_vertical"
                             android:gravity="center_vertical"
@@ -990,6 +1005,7 @@
                             android:layout_width="wrap_content"
                             android:text="@string/security"
                             android:paddingTop="10dp"
+                            android:textAllCaps="true"
                             android:layout_gravity="center_vertical"
                             android:gravity="center_vertical"
                             android:textSize="14dp"
