--- a/keyOS/res/layout/header_app_gridtile.xml
+++ b/keyOS/res/layout/header_app_gridtile.xml
@@ -41,7 +41,6 @@
         android:paddingHorizontal="20dp"
         android:layout_marginLeft="5dp"
         android:textSize="17sp"
-        android:text="Select which apps you want to\ngive access"
         android:layout_height="wrap_content"/>
 
     <LinearLayout
@@ -63,6 +62,7 @@
                 android:text="@string/select_all"
                 android:layout_marginLeft="5dp"
                 android:textStyle="bold"
+                android:textAllCaps="true"
                 android:gravity="center"
                 android:textColor="@android:color/black"
                 android:textSize="16dp"
