--- a/keyOS/res/menu/drawer_menu.xml
+++ b/keyOS/res/menu/drawer_menu.xml
@@ -26,10 +26,10 @@
 
     <group>
 
-    <item
-        android:title="@string/rate"
-        android:id="@+id/rate"
-        app:showAsAction="never" />
+        <item
+            android:title="@string/rate"
+            android:id="@+id/rate"
+            app:showAsAction="never" />
         <item
             android:title="@string/share"
             android:id="@+id/share"
@@ -38,7 +38,7 @@
 
     </group>
 
-    <group android:id="@+id/appInfo">
+    <group >
         <item
             android:title="@string/app_info"
             android:visible="false"
@@ -54,8 +54,6 @@
 
 
     <group>
-
-
         <item
             android:title="@string/developer_contact"
             android:id="@+id/developerContact"
