--- a/keyOS/res/layout/activity_password.xml
+++ b/keyOS/res/layout/activity_password.xml
@@ -59,7 +59,8 @@
                     android:layout_width="match_parent"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
-                    android:layout_height="150dp">
+                    android:layout_height="wrap_content"
+                    android:minHeight="150dp">
                     <LinearLayout
                         android:layout_centerInParent="true"
                         android:layout_width="match_parent"
@@ -73,6 +74,8 @@
                             style="@style/heading"
                             android:textColor="@android:color/black"
                             android:textSize="45dp"
+                            android:maxLines="1"
+                            android:ellipsize="end"
                             android:id="@+id/heading"
                             android:text="@string/create_new"
                             android:layout_height="wrap_content"/>
