--- a/keyOS/res/layout/activity_phone_calls.xml
+++ b/keyOS/res/layout/activity_phone_calls.xml
@@ -191,18 +191,18 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="6dp"
-                                app:srcCompat="@drawable/ic_incoming_call"
-                             />
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="6dp"-->
+<!--                                app:srcCompat="@drawable/ic_incoming_call"-->
+<!--                             />-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -217,7 +217,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="5dp"
-                                android:layout_marginRight="70dp"
+                                android:layout_marginRight="100dp"
                                 android:text="@string/this_will_allow_all_incoming_calls_to_your_mobile"
                                 android:textSize="13dp" />
                         </LinearLayout>
@@ -261,18 +261,18 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="6dp"
-                                app:srcCompat="@drawable/ic_outgoing_call"
-                              />
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="6dp"-->
+<!--                                app:srcCompat="@drawable/ic_outgoing_call"-->
+<!--                              />-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -287,7 +287,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="5dp"
-                                android:layout_marginRight="70dp"
+                                android:layout_marginRight="100dp"
                                 android:text="@string/this_will_allow_all_outgoing_calls_to_your_mobile"
                                 android:textSize="13dp" />
                         </LinearLayout>
@@ -361,12 +361,12 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="5.5dp"
-                                app:srcCompat="@drawable/white_list"
-                                app:tint="#fc8210"/>
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="5.5dp"-->
+<!--                                app:srcCompat="@drawable/white_list"-->
+<!--                                app:tint="#fc8210"/>-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
@@ -374,7 +374,7 @@
                             android:layout_height="match_parent"
                             android:layout_centerInParent="true"
                             android:layout_alignParentLeft="true"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -432,12 +432,12 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="7dp"
-                                app:srcCompat="@drawable/blocklist_calls"
-                                app:tint="#ec0101"/>
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="7dp"-->
+<!--                                app:srcCompat="@drawable/blocklist_calls"-->
+<!--                                app:tint="#ec0101"/>-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
@@ -445,7 +445,7 @@
                             android:layout_height="match_parent"
                             android:layout_centerInParent="true"
                             android:layout_alignParentLeft="true"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -531,18 +531,18 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="6dp"
-                                app:srcCompat="@drawable/contact_white"
-                                app:tint="#03A9F4"/>
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="6dp"-->
+<!--                                app:srcCompat="@drawable/contact_white"-->
+<!--                                app:tint="#03A9F4"/>-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
