--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -34,41 +34,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:textAlignment="center"
         android:gravity="center"
-        android:textColor="#F97C3C"
+        android:layout_marginBottom="80dp"
         android:visibility="gone"
-        android:textSize="20dp"
-        android:orientation="vertical">
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="By using this application, you agree to"
-            android:textSize="13dp"
+            android:text="By DevAsh"
+            android:textSize="30dp"
+            android:textColor="#90000000"
+            android:gravity="center"
             android:layout_height="wrap_content"/>
 
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            app:cardCornerRadius="5dp"
-            android:layout_margin="10dp"
-            android:layout_height="wrap_content">
-            <TextView
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:textColor="@color/white"
-                android:background="@color/icon_background"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="7dp"
-                android:textStyle="bold"
-                android:textSize="14dp"
-                android:text="Accept &amp; continue"
-                android:layout_height="wrap_content"/>
-        </androidx.cardview.widget.CardView>
-
-
     </LinearLayout>
+
 </RelativeLayout>
