--- a/keyOS/res/layout/activity_web_filter.xml
+++ b/keyOS/res/layout/activity_web_filter.xml
@@ -171,12 +171,12 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="5.5dp"
-                                app:srcCompat="@drawable/white_list"
-                                app:tint="#fc8210"/>
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="5.5dp"-->
+<!--                                app:srcCompat="@drawable/white_list"-->
+<!--                                app:tint="#fc8210"/>-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
@@ -184,7 +184,7 @@
                             android:layout_height="match_parent"
                             android:layout_centerInParent="true"
                             android:layout_alignParentLeft="true"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -246,12 +246,12 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="7dp"
-                                app:srcCompat="@drawable/blocklist_calls"
-                                app:tint="#ec0101"/>
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="7dp"-->
+<!--                                app:srcCompat="@drawable/blocklist_calls"-->
+<!--                                app:tint="#ec0101"/>-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
@@ -259,7 +259,7 @@
                             android:layout_height="match_parent"
                             android:layout_centerInParent="true"
                             android:layout_alignParentLeft="true"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -349,18 +349,18 @@
                             app:cardCornerRadius="17.5dp"
                             app:cardElevation="0dp">
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:padding="5dp"
-                                app:srcCompat="@drawable/ic_adult"
-                                />
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"-->
+<!--                                android:padding="5dp"-->
+<!--                                app:srcCompat="@drawable/ic_adult"-->
+<!--                                />-->
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_marginLeft="65dp"
+                            android:layout_marginLeft="15dp"
                             android:orientation="vertical">
 
                             <TextView
