--- a/keyOS/res/layout/sheet_permissions.xml
+++ b/keyOS/res/layout/sheet_permissions.xml
@@ -144,6 +144,7 @@
         </RelativeLayout>
         <RelativeLayout
             android:layout_marginTop="10dp"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="50dp">
             <androidx.cardview.widget.CardView
