--- a/keyOS/res/layout/drawer_header.xml
+++ b/keyOS/res/layout/drawer_header.xml
@@ -31,8 +31,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:text="@string/device_id"
-                    android:textStyle="bold"
                     android:textSize="15dp"
+                    android:layout_marginBottom="2.5dp"
                     android:textColor="@color/black"
                     android:layout_height="wrap_content"/>
                 <TextView
