--- a/keyOS/res/layout/drawer_header.xml
+++ b/keyOS/res/layout/drawer_header.xml
@@ -13,7 +13,7 @@
 
         <ImageView
             android:layout_width="50dp"
-            android:layout_marginLeft="17.5dp"
+            android:layout_marginStart="17.5dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/key_ring"
             android:layout_height="65dp"/>
