--- a/keyOS/res/layout/activity_about.xml
+++ b/keyOS/res/layout/activity_about.xml
@@ -98,7 +98,8 @@
                         app:cardBackgroundColor="@android:color/transparent"
                        >
                         <TextView
-                            android:layout_width="100dp"
+                            android:layout_width="wrap_content"
+                            android:minWidth="100dp"
                             android:text="Update"
                             android:id="@+id/update"
                             android:focusable="true"
@@ -122,8 +123,8 @@
                      <RelativeLayout
                         android:id="@+id/feedback"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp">
+                        android:layout_height="50dp"
+                       >
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -157,8 +158,8 @@
                     <RelativeLayout
                         android:id="@+id/quickSurvey"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                       >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -192,8 +193,8 @@
                     <RelativeLayout
                         android:id="@+id/bugReport"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                       >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -230,8 +231,8 @@
                     <RelativeLayout
                         android:id="@+id/appInfo"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                       >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -268,14 +269,14 @@
                     <LinearLayout
                         android:layout_alignParentBottom="true"
                         android:background="#20000000"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginVertical="30dp"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"/>
                     <RelativeLayout
                         android:id="@+id/visit"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                    >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -312,8 +313,8 @@
                     <RelativeLayout
                         android:id="@+id/rate"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                       >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -350,8 +351,8 @@
                     <RelativeLayout
                         android:id="@+id/share"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                        >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -388,14 +389,14 @@
                     <LinearLayout
                         android:layout_alignParentBottom="true"
                         android:background="#20000000"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginVertical="30dp"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"/>
                     <RelativeLayout
                         android:id="@+id/developerContact"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                      >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -431,8 +432,8 @@
                     <RelativeLayout
                         android:id="@+id/termsAndCondition"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                    >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -468,8 +469,8 @@
                     <RelativeLayout
                         android:id="@+id/privacyPolicy"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp">
+                        android:layout_height="50dp"
+                      >
 
                         <LinearLayout
                             android:layout_width="wrap_content"
