--- a/res/layout/options_view.xml
+++ b/res/layout/options_view.xml
@@ -120,12 +120,12 @@
             android:layout_width="match_parent"
             android:src="@android:drawable/ic_lock_power_off"
             android:id="@id/image"
-            android:tint="?attr/workspaceTextColor"
             app:tint="@android:color/white"
             android:layout_centerInParent="true"
             android:padding="20dp"
             android:layout_marginBottom="10dp"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            launcher:tint="?attr/workspaceTextColor" />
 
         <TextView
             android:layout_width="match_parent"
