--- a/keyOS/res/layout/activity_allow_settings_plugins.xml
+++ b/keyOS/res/layout/activity_allow_settings_plugins.xml
@@ -46,41 +46,24 @@
                         android:textStyle="bold"
                         android:clickable="false"
                         android:focusable="false"
-                        android:text="@string/apps"
+                        android:text="@string/plugins"
                         android:layout_height="match_parent"/>
-
-
-                    <androidx.appcompat.widget.SearchView
-                        android:id="@+id/searchView"
-                        android:layout_marginStart="60dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="10dp"
-                        app:iconifiedByDefault="true"
-                        android:animateLayoutChanges="true"
-                        app:queryHint="Search"
-                        app:queryBackground="@color/colorPrimary"
-                       android:layoutDirection="rtl"
-                    />
-
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
 
-                <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:background="@color/colorPrimary"
+                android:layout_below="@+id/appBar"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/pluginsContainer"
+                    android:nestedScrollingEnabled="false"
                     android:layout_width="match_parent"
-                    android:background="@color/colorPrimary"
-                    android:layout_below="@+id/appBar"
-
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/appsContainer"
-                        android:nestedScrollingEnabled="false"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
-                </LinearLayout>
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
@@ -154,10 +137,6 @@
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/loadingScreen"
-        layout="@layout/layout_loading_screen" />
+
 
 </RelativeLayout>
