--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -72,5 +72,6 @@
     <color name="settings_background_black">#ff000000</color>
     <color name="settings_background_black_2dp">#ff121212</color>
     <color name="settings_background_black_8dp">#ff1e1e1e</color>
+    <color name="light_white">#E6ffffff</color>
 
 </resources>
