--- a/keyOS/res/layout/activity_custom_settings.xml
+++ b/keyOS/res/layout/activity_custom_settings.xml
@@ -44,7 +44,7 @@
                             android:maxLines="1"
                             android:ellipsize="end"
                             android:id="@+id/heading"
-                            android:text="Settings"
+                            android:text="@string/custom_settings"
                             android:layout_height="wrap_content"/>
 
                     </LinearLayout>
