--- a/keyOS/res/layout/activity_splash_screen.xml
+++ b/keyOS/res/layout/activity_splash_screen.xml
@@ -14,18 +14,16 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="200dp"
             android:layout_marginHorizontal="10dp"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="0dp"
             android:layout_marginStart="5dp"
             android:layout_height="200dp">
             <ImageView
                 android:layout_width="match_parent"
                 android:src="@drawable/keyos_web"
                 android:layout_height="match_parent"/>
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
 
 
